---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Place an empty frame over the player and listen to hover events
    - Try to follow the zoom level
    - Try to predict zoom scaling (too unstable/unpredictable)
    - Purge zoom related code
    - Stash research
    - Ponder about spamming the player changed position event
    - Attempt to always have a spidertron over the player
    - Divert attention to the item request proxy
    - Test making a proxy that causes no alerts yet stays alive
    - Change data.lua to provide our own item request proxy
    - Excelent, bots do not even depart to deliver the radar
    - Cleanup control stage
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 08
  Info:
    - Initial commit