@@ -1,2 +1,3 @@
 [entity-name]
-csrsbsy-item-request-proxy=Loading radar...
+csrsbsy-item-request-proxy=Radar connecting
+csrsbsy-electric-pole=Radar connected
