@@ -14,6 +14,7 @@ Date: ????
     - Change data.lua to provide our own item request proxy
     - Excelent, bots do not even depart to deliver the radar
     - Cleanup control stage
+    - Create an electric pole when hovering your own proxy
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 08
